--- a/08-Estimating-unknown-quantities-from-a-sample.qmd
+++ b/08-Estimating-unknown-quantities-from-a-sample.qmd
@@ -128,20 +128,22 @@ knitr::include_graphics("images/fig8-3.png")
 
 就像前面說明的範例所展示的，我們幾乎不可能從想研究的母群取得真正的簡單隨機樣本。許多在大學實驗室執行的心理學實驗，都是直接找該校大學部同學來參加，設計實驗的教授和研究生都要**假裝**他們的參與者都是隨機樣本的一部分。取樣方法還有很多種，而且其實是超出這門課程的學習範圍，在此還是做點介紹，給好奇心強的同學一些進階學習的指引。
 
-- *分層取樣* 
+- *分層取樣* 若是要研究的母群能夠切分為幾個不同的子群體或分層，像是在多個地點進行的研究。與其從整個人口中隨機取樣，不如嘗試從每個分層中單獨收集隨機樣本。有時候分層取樣比簡單隨機取樣更容易執行，特別是母群已經被劃分為不同的分層。如果某些子群體人數很稀少，分層取樣會比簡單隨機取樣更有效。例如，要研究思覺失調症，最好將母群劃分為兩個群體（思覺失調症患者和非思覺失調症患者）[^08-estimating-unknown-quantities-from-a-sample-2] ，然後從每個群體選取相等數量的人。如果只是隨機選取，樣本包含的思覺失調症患者人數很可能會非常少，導致研究結果毫無用處。這種特定類型的分層取樣被稱為超額取樣，因為是特意製造能代表稀少子群體的樣本。
 
-- *滾雪球取樣* 
+- *滾雪球取樣* 是一種特別適用於從"隱藏"或難以獲得的群體取樣的技術，尤其常見於社會科學。例如，今天有研究人員想找跨性別人士進行一項意見調查。一開始研究人員可能只有掌握幾位跨性別者的聯繫方式，所以首先邀請他們參加（第一階段）。在調查結束時，請求參與者提供其他可能會參加的跨性別人士聯繫方式。在第二階段，將邀請聯繫清單的人士參與調查。持續這樣過程，直到研究人員收集足夠的資料。滾雪球取樣的最大優勢是，能在很難獲得任何資料的狀況持續找出資料來源。對於統計分析，這種方法的主要缺點是樣本相當不隨機，並且很難用統計方法解決非隨機偏誤。對於研究實務，缺點是如果處理不當，研究過程可能會發生倫理問題，因為一些特定人士隱藏身份通常是有原因的。我在這裡選擇跨性別人群作為例子，就是為了強調這個問題。如果一個不小心，研究人員可能會曝露那些不願意「出櫃」的人。就算不是透過特定人士的人際關係，透過社群平台接觸他們仍然可能會侵犯他們的個人隱私。在許多狀況，聯繫他們之前獲得他們的知情同意是非常困難的，而且在很多時候，只是透過平台帳號聯絡上目標人士並且打招呼，就可能給對方帶來傷害。社群平台是複雜的環境，就算人人都可以使用平台，有倫理意識的研究人員不能將之當成可以任意取得資料的來源。
 
-- *方便取樣* 
+- *方便取樣* 大致就是字面上的意思。如果不是或無法從真正感興趣的母群隨機選擇，研究人員只要透過最方便的途徑接觸樣本。除了滾雪球取樣是一種便利取樣，還有很多其他類型。心理學中的一個常見例子是找心理學系學生來做研究，這類樣本從兩個方面來說是非隨機的。首先，只找心理學系學生做研究，研究資料只能代表特定的子群體。其次，學生通常可以選擇他們參加的研究，因此資料樣本是心理系學生的自選子集合，而不是隨機選擇的子集合。在現實世界，大多數行為科學研究都是某種形式的便利樣本。有時這會造成嚴重的限制，但並非總是如此。
+
+[^08-estimating-unknown-quantities-from-a-sample-2]: 現實世界沒有那麼簡單。很難明確地將所有人類劃分為二元類別，如“思覺失調症患者”和“非思覺失調症患者”。但這不是一本臨床心理學教科書，請原諒我在書中各處的簡化用詞。
 
 
-<!---As you can see from looking at the list of possible populations that I showed above, it is almost impossible to obtain a simple random sample from most populations of interest. When I run experiments I'd consider it a minor miracle if my participants turned out to be a random sampling of the undergraduate psychology students at Adelaide university, even though this is by far the narrowest population that I might want to generalise to. A thorough discussion of other types of sampling schemes is beyond the scope of this book, but to give you a sense of what's out there I'll list a few of the more important ones.--->
+<!---As you can see from looking at the list of possible populations that I showed above, it is almost impossible to obtain a simple random sample from most populations of interest. When I run experiments I'd consider it a minor miracle if my participants turned out to be a random sampling of the undergraduate psychology students at Adelaide university, even though this is by far the narrowest population that I might want to generalise to. A thorough discussion of other types of sampling schemes is beyond the scope of this book, but to give you a sense of what's out there I'll list a few of the more important ones.
 
 -   *Stratified sampling*. Suppose your population is (or can be) divided into several different sub-populations, or strata. Perhaps you're running a study at several different sites, for example. Instead of trying to sample randomly from the population as a whole, you instead try to collect a separate random sample from each of the strata. Stratified sampling is sometimes easier to do than simple random sampling, especially when the population is already divided into the distinct strata. It can also be more efficient than simple random sampling, especially when some of the sub-populations are rare. For instance, when studying schizophrenia it would be much better to divide the population into two [^08-estimating-unknown-quantities-from-a-sample-2] strata (schizophrenic and not-schizophrenic) and then sample an equal number of people from each group. If you selected people randomly you would get so few schizophrenic people in the sample that your study would be useless. This specific kind of of stratified sampling is referred to as oversampling because it makes a deliberate attempt to over-represent rare groups
 -   *Snowball sampling* is a technique that is especially useful when sampling from a "hidden" or hard to access population and is especially common in social sciences. For instance, suppose the researchers want to conduct an opinion poll among transgender people. The research team might only have contact details for a few trans folks, so the survey starts by asking them to participate (stage 1). At the end of the survey the participants are asked to provide contact details for other people who might want to participate. In stage 2 those new contacts are surveyed. The process continues until the researchers have sufficient data. The big advantage to snowball sampling is that it gets you data in situations that might otherwise be impossible to get any. On the statistical side, the main disadvantage is that the sample is highly non-random, and non-random in ways that are difficult to address. On the real life side, the disadvantage is that the procedure can be unethical if not handled well, because hidden populations are often hidden for a reason. I chose transgender people as an example here to highlight this issue. If you weren't careful you might end up outing people who don't want to be outed (very, very bad form), and even if you don't make that mistake it can still be intrusive to use people's social networks to study them. It's certainly very hard to get people's informed consent before contacting them, yet in many cases the simple act of contacting them and saying "hey we want to study you" can be hurtful. Social networks are complex things, and just because you can use them to get data doesn't always mean you should.
 -   *Convenience sampling* is more or less what it sounds like. The samples are chosen in a way that is convenient to the researcher, and not selected at random from the population of interest. Snowball sampling is one type of convenience sampling, but there are many others. A common example in psychology are studies that rely on undergraduate psychology students. These samples are generally non-random in two respects. First, reliance on undergraduate psychology students automatically means that your data are restricted to a single sub-population. Second, the students usually get to pick which studies they participate in, so the sample is a self selected subset of psychology students and not a randomly selected subset. In real life most studies are convenience samples of one form or another. This is sometimes a severe limitation, but not always.
 
-[^08-estimating-unknown-quantities-from-a-sample-2]: Nothing in life is that simple. There's not an obvious division of people into binary categories like "schizophrenic" and "not schizophrenic". But this isn't a clinical psychology text so please forgive me a few simplifications here and there.
+[^08-estimating-unknown-quantities-from-a-sample-2]: Nothing in life is that simple. There's not an obvious division of people into binary categories like "schizophrenic" and "not schizophrenic". But this isn't a clinical psychology text so please forgive me a few simplifications here and there.--->
 
 ### 不是簡單隨機樣本該怎麼辦？
 
