--- a/09-Hypothesis-testing.qmd
+++ b/09-Hypothesis-testing.qmd
@@ -12,7 +12,7 @@ source("header.R")
 
 前一章我們學習了推論統計的兩個“大主題”之一——**估計**。這一章要學習另一個大主題——**假設檢定**。從最抽象的角度來看，假設檢定實際上是一個非常簡單的概念。研究人員對世界有一些理論，想要確定數據是否真正支持這些理論。然而，細節非常麻煩，多數學生會發現假設檢定的理論是統計學中最令人沮喪的部分。這一章的結構如下。首先，我將詳細描述假設檢定的運作過程，我會使用一個簡單的範例來展示如何"建立"假設檢定。在這個過程中，我會盡量避免過於教條主義，並專注於解釋檢定程序的基本邏輯。[^09-hypothesis-testing-2]之後，我會花一些時間談論各種環繞假設檢定理論的教條、規則和異端邪說。
 
-[^09-hypothesis-testing-2]: 技術性註記。這一章的敘述與許多入門教材的常見說明有些微不同。經典的虛無假設檢定理論是20世紀初期，由Ronald Fisher和Jerzy Neyman發展出來的，但是Fisher和Neyman對於理論的運作有非常不同的看法。現今大多數教材所採用的檢定理論是兩種觀點的混合。這裡所採用的解說較接近Neyman的風格，特別在解釋*p*值意義的部分。
+[^09-hypothesis-testing-2]: 技術性註記。這一章的敘述與許多入門教材的常見說明有些微不同。經典的虛無假設檢定理論是20世紀初期，由羅納德·費雪和傑茲·尼曼 兩位統計學者*分別*發展出來的，但是費雪和尼曼對於理論的運作有非常不同的看法。現今大多數教材所採用的檢定理論是兩種觀點的混合。本書的解說方式較接近尼曼的風格，特別在解釋*p*值意義的部分。
 
 <!--- > The process of induction is the process of assuming the simplest law that can be made to harmonize with our experience. This process, however, has no logical foundation but only a psychological one. It is clear that there are no grounds for believing that the simplest course of events will really happen. It is an hypothesis that the sun will rise tomorrow: and this means that we do not know whether it will rise.\
 > -- Ludwig Wittgenstein [^09-hypothesis-testing-1]
@@ -236,7 +236,7 @@ As it turns out those three things uniquely solve the problem. Our critical regi
 knitr::include_graphics("images/fig9-2.png")
 ```
 
-最後，總結一下完成假設檢驗的主要步驟：
+最後，總結一下完成假設檢定的主要步驟：
 
 - 選擇一個顯著水準 (例如，$\alpha = .05$)；
 - 選擇一個適當的統計檢定值 (例如，$X$)，並且設定有比較意義的$H_0$和$H_1$;
@@ -530,11 +530,25 @@ knitr::include_graphics("images/fig9-8.png")
 
 ## 值得繼續學習的主題
 
-What I've described to you in this chapter is the orthodox framework for null hypothesis significance testing (NHST). Understanding how NHST works is an absolute necessity because it has been the dominant approach to inferential statistics ever since it came to prominence in the early 20th century. It's what the vast majority of working scientists rely on for their data analysis, so even if you hate it you need to know it. However, the approach is not without problems. There are a number of quirks in the framework, historical oddities in how it came to be, theoretical disputes over whether or not the framework is right, and a lot of practical traps for the unwary. I'm not going to go into a lot of detail on this topic, but I think it's worth briefly discussing a few of these issues.
+> **譯者註** 20230418初步以ChatGPT-4完成翻譯，內容待編修。
+
+在本章中，我向您描述的是虛無假設顯著性檢驗（NHST）的正統框架。理解NHST如何運作是絕對必要的，因為自20世紀初成為主流以來，它一直是主要的推論統計方法。這是絕大多數在職科學家依賴的數據分析方法，因此即使您討厭它，也需要了解它。然而，這種方法並非沒有問題。框架中存在一些怪異之處，其產生的歷史奇觀，關於框架是否正確的理論爭議，以及對不慎的人來說有很多實際陷阱。我不打算詳細討論這個主題，但我認為簡要討論一下這些問題是值得的。
+
+<!--- What I've described to you in this chapter is the orthodox framework for null hypothesis significance testing (NHST). Understanding how NHST works is an absolute necessity because it has been the dominant approach to inferential statistics ever since it came to prominence in the early 20th century. It's what the vast majority of working scientists rely on for their data analysis, so even if you hate it you need to know it. However, the approach is not without problems. There are a number of quirks in the framework, historical oddities in how it came to be, theoretical disputes over whether or not the framework is right, and a lot of practical traps for the unwary. I'm not going to go into a lot of detail on this topic, but I think it's worth briefly discussing a few of these issues. --->
 
 ### 尼曼與費雪
 
-The first thing you should be aware of is that orthodox NHST is actually a mash-up of two rather different approaches to hypothesis testing, one proposed by Sir Ronald Fisher and the other proposed by Jerzy Neyman (see @Lehmann2011 for a historical summary). The history is messy because Fisher and Neyman were real people whose opinions changed over time, and at no point did either of them offer "the definitive statement" of how we should interpret their work many decades later. That said, here's a quick summary of what I take these two approaches to be.
+您首先應該知道的是，正統虛無假設檢定實際上是將羅納德·費雪爵士和傑茲·尼曼提出的兩種相當不同的假設檢定方法混合在一起（有關歷史概要，請參見 @Lehmann2011 ）。歷史很混亂，因為費雪和尼曼是現實生活中的人，他們的觀點會隨著時間而改變，而且他們都沒有提供“如何解釋幾十年後他們的工作的明確說法”。也就是說，這是我對這兩種方法的快速總結。
+
+首先，讓我們談論費雪的方法。據我所知，費雪假設您只有一個假設（虛無假設），您想做的是找出虛無假設是否與數據不一致。從他的角度來看，您應該做的是檢查數據是否根據虛無假設是“足夠不可能”。實際上，如果您回想一下我們之前的討論，這就是費雪如何定義p值的。根據費雪的說法，如果虛無假設對數據的解釋非常差，那麼您可以放心地拒絕它。但是，由於您無法將其與其他假設進行比較，因此無法“接受對立假設”，因為您不一定有一個明確陳述的對立假設。這就是所有的內容。
+
+相比之下，尼曼認為假設檢定的目的是作為行動指南，他的方法比費雪的更正式。他認為，您可以做很多事情（接受虛無假設或接受對立假設），檢驗的目的是告訴您數據支持哪一個。從這個角度來看，確定對立假設至關重要。如果您不知道對立假設是什麼，那麼您就不知道測試的有效性，甚至不知道哪個動作是有意義的。他的框架確實需要不同假設之間的競爭。對於尼曼來說，$p$值並未直接衡量在虛無假設下的數據（或更極端的數據）的機率，而更像是一個抽象描述，關於哪些“可能的測試”告訴您接受虛無假設，以及哪些“可能的測試”告訴您接受對立假設。
+
+如您所見，今天的虛無假設檢定是兩者之間的奇怪混合物。我們談論擁有虛無假設和對立假設（尼曼），但通常[^09-hypothesis-testing-13]根據極端數據來定義$p$值（費雪），但我們仍然有α值（尼曼）。部分統計檢驗具有明確指定的對立假設（尼曼），但其他則相對含糊（費雪）。至少根據某些人的看法，我們不允許談論接受對立假設（費雪）。假設檢定是至今還是一團混亂的統計學歷史遺產，但我希望這至少能解釋為什麼會這樣。
+
+[^09-hypothesis-testing-13]：儘管這本書描述了尼曼和費雪對$p$值的定義，但大多數不會。大多數入門教材只會給你費雪版本。
+
+<!--- The first thing you should be aware of is that orthodox NHST is actually a mash-up of two rather different approaches to hypothesis testing, one proposed by Sir Ronald Fisher and the other proposed by Jerzy Neyman (see @Lehmann2011 for a historical summary). The history is messy because Fisher and Neyman were real people whose opinions changed over time, and at no point did either of them offer "the definitive statement" of how we should interpret their work many decades later. That said, here's a quick summary of what I take these two approaches to be.
 
 First, let's talk about Fisher's approach. As far as I can tell, Fisher assumed that you only had the one hypothesis (the null) and that what you want to do is find out if the null hypothesis is inconsistent with the data. From his perspective, what you should do is check to see if the data are "sufficiently unlikely" according to the null. In fact, if you remember back to our earlier discussion, that's how Fisher defines the p-value. According to Fisher, if the null hypothesis provided a very poor account of the data then you could safely reject it. But, since you don't have any other hypotheses to compare it to, there's no way of "accepting the alternative" because you don't necessarily have an explicitly stated alternative. That's more or less all there is to it.
 
@@ -542,39 +556,60 @@ In contrast, Neyman thought that the point of hypothesis testing was as a guide 
 
 As you can see, what we have today is an odd mishmash of the two. We talk about having both a null hypothesis and an alternative (Neyman), but usually[^09-hypothesis-testing-13] define the $p$ value in terms of exreme data (Fisher), but we still have $\alpha$ values (Neyman). Some of the statistical tests have explicitly specified alternatives (Neyman) but others are quite vague about it (Fisher). And, according to some people at least, we're not allowed to talk about accepting the alternative (Fisher). It's a mess, but I hope this at least explains why it's a mess.
 
-[^09-hypothesis-testing-13]: Although this book describes both Neyman's and Fisher's definition of the $p$ value, most don't. Most introductory textbooks will only give you the Fisher version.
+[^09-hypothesis-testing-13]: Although this book describes both Neyman's and Fisher's definition of the $p$ value, most don't. Most introductory textbooks will only give you the Fisher version. --->
 
 ### 貝氏統計與次數主義統計
 
-Earlier on in this chapter I was quite emphatic about the fact that you *cannot* interpret the p value as the probability that the null hypothesis is true. NHST is fundamentally a frequentist tool (see @sec-Introduction-to-probability) and as such it does not allow you to assign probabilities to hypotheses. The null hypothesis is either true or it is not. The Bayesian approach to statistics interprets probability as a degree of belief, so it's totally okay to say that there is a $10\%$ chance that the null hypothesis is true. That's just a reflection of the degree of confidence that you have in this hypothesis. You aren't allowed to do this within the frequentist approach. Remember, if you're a frequentist, a probability can only be defined in terms of what happens after a large number of independent replications (i.e., a long run frequency). If this is your interpretation of probability, talking about the "probability" that the null hypothesis is true is complete gibberish: a null hypothesis is either true or it is false. There's no way you can talk about a long run frequency for this statement. To talk about "the probability of the null hypothesis" is as meaningless as "the colour of freedom". It doesn't have one!
+在[統計檢定的*p*值](09-Hypothesis-testing.html#sec-The-p-value-of-a-test)這一節，我強調不能將*p*值解釋為虛無假設為真的機率。NHST基本上是一個頻率主義工具（參見@sec-Introduction-to-probability），因此它不允許您為假設分配機率。虛無假設要么是對的，要么是錯的。貝氏統計方法將機率解釋為信念程度，因此完全可以說虛無假設為真的機率是$10\%$。這只是反映了您對這個假設的信心程度。在頻率主義方法中，您不能這樣做。請記住，如果您是頻率主義者，機率只能根據大量獨立重複實驗（即長期頻率）來定義。如果這是您對機率的解釋，那麼談論“虛無假設的機率”就是完全無意義的：虛無假設要么是對的，要么是錯的。您無法將這個陳述的長期頻率表達出來。談論“虛無假設的機率”就像談論“自由的顏色”一樣無意義。它沒有顏色！
 
-Most importantly, this isn't a purely ideological matter. If you decide that you are a Bayesian and that you're okay with making probability statements about hypotheses, you have to follow the Bayesian rules for calculating those probabilities. I'll talk more about this in @sec-Bayesian-statistics, but for now what I want to point out to you is the p value is a terrible approximation to the probability that $H_0$ is true. If what you want to know is the probability of the null, then the p value is not what you're looking for!
+最重要的是，這不僅僅是一個純粹的意識形態問題。如果您決定成為貝氏學派，並且您可以對假設做出機率陳述，那麼您必須遵循貝氏規則來計算這些機率。在 @sec-Bayesian-statistics 中我將進一步談論這個問題，但目前我想指出的是，p值對於$H_0$為真的機率是一個糟糕的近似。如果您想知道虛無假設的機率，那麼p值並非您要尋找的東西！
+
+<!--- Earlier on in this chapter I was quite emphatic about the fact that you *cannot* interpret the p value as the probability that the null hypothesis is true. NHST is fundamentally a frequentist tool (see @sec-Introduction-to-probability) and as such it does not allow you to assign probabilities to hypotheses. The null hypothesis is either true or it is not. The Bayesian approach to statistics interprets probability as a degree of belief, so it's totally okay to say that there is a $10\%$ chance that the null hypothesis is true. That's just a reflection of the degree of confidence that you have in this hypothesis. You aren't allowed to do this within the frequentist approach. Remember, if you're a frequentist, a probability can only be defined in terms of what happens after a large number of independent replications (i.e., a long run frequency). If this is your interpretation of probability, talking about the "probability" that the null hypothesis is true is complete gibberish: a null hypothesis is either true or it is false. There's no way you can talk about a long run frequency for this statement. To talk about "the probability of the null hypothesis" is as meaningless as "the colour of freedom". It doesn't have one!
+
+Most importantly, this isn't a purely ideological matter. If you decide that you are a Bayesian and that you're okay with making probability statements about hypotheses, you have to follow the Bayesian rules for calculating those probabilities. I'll talk more about this in @sec-Bayesian-statistics, but for now what I want to point out to you is the p value is a terrible approximation to the probability that $H_0$ is true. If what you want to know is the probability of the null, then the p value is not what you're looking for! --->
 
 ### 決策陷阱
 
-As you can see, the theory behind hypothesis testing is a mess, and even now there are arguments in statistics about how it "should" work. However, disagreements among statisticians are not our real concern here. Our real concern is practical data analysis. And while the "orthodox" approach to null hypothesis significance testing has many drawbacks, even an unrepentant Bayesian like myself would agree that they can be useful if used responsibly. Most of the time they give sensible answers and you can use them to learn interesting things. Setting aside the various ideologies and historical confusions that we've discussed, the fact remains that the biggest danger in all of statistics is *thoughtlessness*. I don't mean stupidity, I literally mean thoughtlessness. The rush to interpret a result without spending time thinking through what each test actually says about the data, and checking whether that's consistent with how you've interpreted it. That's where the biggest trap lies.
+如您所見，假設檢定背後的理論是一團糟，甚至到現在統計學家們還在爭論它“應該”如何運作。然而，統計學家之間的分歧不是我們真正關心的問題。我們真正關心的是實用數據分析。儘管“正統”的虛無假設顯著性檢驗存在許多缺陷，但即使是像我這樣毫不猶豫的貝氏學者也會同意，如果使用得當，它們是有用的。大多數時候，它們會給出合理的答案，並且您可以用它們來學習有趣的事物。撇開我們已經討論過的各種意識形態和歷史混亂，事實仍然是統計中最大的危險在於*不加思考*。我不是指愚蠢，而是字面意思上的不加思考。在沒有花時間考慮每個檢驗實際上對數據說了什麼，以及檢查這是否與您的解釋一致的情況下，匆忙地解釋結果。這就是最大的陷阱所在。
+
+舉個例子，考慮以下例子（參見 @Gelman2006 ）。假設我正在進行ESP研究，並且我已經決定分別為男性參與者和女性參與者分析數據。在男性參與者中，有$33$人中的$50$人猜對了卡片的顏色。這是一個顯著效應（$p=.03$）。在女性參與者中，有$29$人中的$50$人猜對了。這不是一個顯著效應（$p=.32$）。看到這一點，人們極其想知道為什麼男性和女性在通靈能力方面存在差異。然而，這是錯誤的。如果你仔細想想，我們實際上並沒有運行一個明確比較男性和女性的測試。我們所做的一切就是將男性與機會進行比較（二項檢驗顯著）和將女性與機會進行比較（二項檢驗不顯著）。如果我們想要認為男性和女性之間存在實際差異，我們可能應該運行一個虛無假設沒有差異的檢驗！我們可以使用另一種假設檢定[^09-hypothesis-testing-14]，但是當我們這樣做時，事實證明，我們並沒有證據表明男性和女性之間存在顯著差異（$p=.54$）。現在，您是否認為兩組之間存在根本差異？當然不是。這裡發生的情況是，兩組數據（男性和女性）都非常接近邊界。純粹憑機運，其中一組恰好落在$p=.05$這條神奇的線上，而另一組則沒有。這並不意味著男性和女性之間存在差異。這個錯誤非常普遍，您應該時刻警惕。顯著與不顯著之間的差異並不能證明存在實際差異。如果您想說兩組之間存在差異，那麼您必須測試該差異！
+
+[^09-hypothesis-testing-14]: 在這種情況下，皮爾森卡方獨立性檢驗（參見 @sec-Categorical-data-analysis ）
+
+上面的例子僅僅是一個例子。我將其單獨拿出來，因為它非常常見，但更大的畫面是數據分析可能很難做對。思考您要測試什麼，<u>為什麼</u>要測試它，以及您的測試結果是否可能在現實世界中有意義。
+
+<!--- As you can see, the theory behind hypothesis testing is a mess, and even now there are arguments in statistics about how it "should" work. However, disagreements among statisticians are not our real concern here. Our real concern is practical data analysis. And while the "orthodox" approach to null hypothesis significance testing has many drawbacks, even an unrepentant Bayesian like myself would agree that they can be useful if used responsibly. Most of the time they give sensible answers and you can use them to learn interesting things. Setting aside the various ideologies and historical confusions that we've discussed, the fact remains that the biggest danger in all of statistics is *thoughtlessness*. I don't mean stupidity, I literally mean thoughtlessness. The rush to interpret a result without spending time thinking through what each test actually says about the data, and checking whether that's consistent with how you've interpreted it. That's where the biggest trap lies.
 
 To give an example of this, consider the following example (see @Gelman2006). Suppose I'm running my ESP study and I've decided to analyse the data separately for the male participants and the female participants. Of the male participants, $33$ out of $50$ guessed the colour of the card correctly. This is a significant effect ($p = .03$). Of the female participants, $29$ out of $50$ guessed correctly. This is not a significant effect ($p = .32$). Upon observing this, it is extremely tempting for people to start wondering why there is a difference between males and females in terms of their psychic abilities. However, this is wrong. If you think about it, we haven't actually run a test that explicitly compares males to females. All we have done is compare males to chance (binomial test was significant) and compared females to chance (binomial test was non significant). If we want to argue that there is a real difference between the males and the females, we should probably run a test of the null hypothesis that there is no difference! We can do that using a different hypothesis test,[^09-hypothesis-testing-14] but when we do that it turns out that we have no evidence that males and females are significantly different ($p = .54$). Now do you think that there's anything fundamentally different between the two groups? Of course not. What's happened here is that the data from both groups (male and female) are pretty borderline. By pure chance one of them happened to end up on the magic side of the $p = .05$ line, and the other one didn't. That doesn't actually imply that males and females are different. This mistake is so common that you should always be wary of it. The difference between significant and not-significant is not evidence of a real difference. If you want to say that there's a difference between two groups, then you have to test for that difference!
 
 [^09-hypothesis-testing-14]: In this case, the Pearson chi-square test of independence (see @sec-Categorical-data-analysis)
 
-The example above is just that, an example. I've singled it out because it's such a common one, but the bigger picture is that data analysis can be tricky to get right. Think about what it is you want to test, <u>why</u> you want to test it, and whether or not the answers that your test gives could possibly make any sense in the real world.
+The example above is just that, an example. I've singled it out because it's such a common one, but the bigger picture is that data analysis can be tricky to get right. Think about what it is you want to test, <u>why</u> you want to test it, and whether or not the answers that your test gives could possibly make any sense in the real world. --->
 
 ## 本章小結
 
 虛無假設檢定是統計理論最普遍的一種應用，科學研究報告結果都會呈現某種假設的檢定。現代科學家幾乎都多少要了解*p*值的意義，否則不能被認為是合格的科學研究者，所以這一章是本書最重要的部分。以下幫助讀者及學生快速回顧本章重點：
 
 - [假設的層次](09-Hypothesis-testing.html#%E5%81%87%E8%A8%AD%E5%A4%A7%E8%A7%80%E5%9C%92) 研究假設與統計假設。虛無假設與對立假設。
-- [兩種決策失誤](09-Hypothesis-testing.html#%E5%85%A9%E7%A8%AE%E6%B1%BA%E7%AD%96%E5%A4%B1%E8%AA%A4) 型一與型二錯誤
+- [兩種決策失誤](09-Hypothesis-testing.html#%E5%85%A9%E7%A8%AE%E6%B1%BA%E7%AD%96%E5%A4%B1%E8%AA%A4) 型一與型二錯誤[^09-translation-02]
 - [運用取樣分佈檢測統計值](09-Hypothesis-testing.html#%E9%81%8B%E7%94%A8%E6%A8%A3%E6%9C%AC%E5%88%86%E4%BD%88%E6%AA%A2%E6%B8%AC%E7%B5%B1%E8%A8%88%E5%80%BC).
-- 統計推論的[決策要素](09-Hypothesis-testing.html#%E7%B5%B1%E8%A8%88%E6%8E%A8%E8%AB%96%E7%9A%84%E6%B1%BA%E7%AD%96%E8%A6%81%E7%B4%A0)
+- 統計推論的[決策要素](09-Hypothesis-testing.html#%E7%B5%B1%E8%A8%88%E6%8E%A8%E8%AB%96%E7%9A%84%E6%B1%BA%E7%AD%96%E8%A6%81%E7%B4%A0)[^09-translation-03]
 - [統計檢定的*p*值](http://localhost:7933/09-Hypothesis-testing.html#sec-The-p-value-of-a-test) 為何用*p*值做決策是"模擬兩可"。
 - [假設檢定的報告格式](09-Hypothesis-testing.html#%E5%81%87%E8%A8%AD%E6%AA%A2%E5%AE%9A%E7%9A%84%E5%A0%B1%E5%91%8A%E6%A0%BC%E5%BC%8F)
-- [假設檢定實作須知](09-Hypothesis-testing.html#%E5%81%87%E8%A8%AD%E6%AA%A2%E5%AE%9A%E5%AF%A6%E4%BD%9C%E9%A0%88%E7%9F%A5) 
-- [效果量、樣本量、考驗力](09-Hypothesis-testing.html#sec-Effect-size-sample-size-and-power)
+- [假設檢定實作須知](09-Hypothesis-testing.html#%E5%81%87%E8%A8%AD%E6%AA%A2%E5%AE%9A%E5%AF%A6%E4%BD%9C%E9%A0%88%E7%9F%A5)[^09-translation-04] 
+- [效果量、樣本量、考驗力](09-Hypothesis-testing.html#sec-Effect-size-sample-size-and-power)[^09-translation-05]
 - 一些[值得繼續學習的主題](09-Hypothesis-testing.html#%E5%80%BC%E5%BE%97%E7%B9%BC%E7%BA%8C%E5%AD%B8%E7%BF%92%E7%9A%84%E4%B8%BB%E9%A1%8C)
 
 到了本書最後一章 @sec-Bayesian-statistics ，我們會從貝氏統計觀點回顧統計理論與虛無假設檢定，還有介紹幾套非次數主義取向的統計工具。不過我們先暫別抽象的統計理論，接下來的第五部分將學習實用的統計分析方法。
+
+[^09-translation-02]: 讀完原作者虛構的ESP研究案例，打開示範檔案庫的"Binomial Test"，找一找虛無假設與對立假設、型一與型二錯誤有沒有呈現在jamovi介面的任何地方？有的話是如何呈現？
+
+[^09-translation-03]: 如果在 @sec-Introduction-to-probability 有用過distrACTION這個模組認識機率分佈，再次使用這個模組繪製雙側檢定與單側檢定的棄卻域。
+
+[^09-translation-04]: 分別以雙側檢定與單側檢定的結果，使用distrACTION模組確認表格內量數之外的累積機率，確認是否與表格裡的p值一致？
+
+[^09-translation-05]: 首先定義一個你期望為真的成功率或失敗率，使用distrACTION模組製作一個代表這項機率的二項分佈機率，繪製出雙側與單側考驗力的區域。
+
 
 <!---Null hypothesis testing is one of the most ubiquitous elements to statistical theory. The vast majority of scientific papers report the results of some hypothesis test or another. As a consequence it is almost impossible to get by in science without having at least a cursory understanding of what a p-value means, making this one of the most important chapters in the book. As usual, I'll end the chapter with a quick recap of the key ideas that we've talked about:
 
